# SeeSea

./: .gitignore  ALIGNMENT_ANALYSIS.md  ALIGNMENT_COMPLETION_REPORT.md  CHANGELOG_v0.2.1.md  CHINA_MODE_IMPLEMENTATION.md  Cargo.toml  DERIVE_MODULE_REPORT.md  ENGINE_ALIGNMENT_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NOTICE  PROJECT_STRUCTURE.md  PYTHON_SDK_IMPLEMENTATION.md  README.md  README_PYTHON.md  SeeSea.init.mono  analyze_google_html.py  commit_search_impl.sh  debug_search.rs  google_response.html  install.py  pyproject.toml  requirements.txt  setup.py  test_google.py  test_google.rs
benchmarks/: __init__.py
config/: china_mode.toml  default.toml  development.toml
data/cache.db/: db
docs/: ABSOLUTE_CONSISTENCY_CHECK.md  API.md  BEST_PRACTICES.md  CHINA_MODE.md  DIRECTORY_STRUCTURE.md  DUCKDUCKGO_IMPLEMENTATION.md  ENGINE_CUSTOMIZATION.md  ENGINE_IMPLEMENTATION_DETAILS.md  ENGINE_IMPLEMENTATION_PLAN.md  FIX_GUIDE.md  PERFORMANCE.md  PYTHON_SDK.md  README.md  SEARCH_USAGE.md  TYPE_SYSTEM.md  fulltext-search-guide.md
examples/: api_server.rs  browser_usage.py  example_engine.rs
examples/python/: advanced_usage.py  api_server.py  basic_search.py
seesea/: README.md  __init__.py  __main__.py  api.py  cli.py  config.py  pyproject.toml  search.py  utils.py
seesea/seesea/: __init__.py  __main__.py  api.py  cli.py  config.py  rss.py  search.py  types.py  utils.py
seesea/seesea/browser/: __init__.py  base.py  xinhua.py
src/: __init__.py  __main__.py  error.rs  lib.rs  main.rs  python_bindings.rs
src/api/: mod.rs  on.rs  types.rs
src/api/handlers/: cache.rs  config.rs  health.rs  metrics.rs  mod.rs  rss.rs  search.rs
src/api/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  ratelimit.rs
src/cache/: manager.rs  metadata.rs  mod.rs  on.rs  result.rs  rss.rs  semantic.rs  semantic_cache.rs  types.rs
src/config/: common.rs  config.rs  general.rs  loader.rs  mod.rs  on.rs  types.rs  validator.rs
src/config/api/: mod.rs  types.rs
src/config/cache/: mod.rs  types.rs
src/config/engines/: mod.rs  types.rs
src/config/logging/: mod.rs  types.rs
src/config/privacy/: mod.rs  types.rs
src/config/search/: mod.rs  types.rs
src/config/server/: mod.rs  on.rs  types.rs
src/crates/: mod.rs
src/crates/error/: Cargo.toml  mod.rs
src/crates/error-derive/: Cargo.toml
src/crates/error-derive/src/: lib.rs
src/crates/error/examples/: advanced_features.rs  basic.rs  error_chain.rs  result_type.rs
src/crates/error/src/: lib.rs
src/crates/error/tests/: derive_tests.rs
src/crates/transaction/: Cargo.toml  README.md  REPORT.md  SUMMARY.md
src/crates/transaction-derive/: Cargo.toml
src/crates/transaction-derive/src/: lib.rs
src/crates/transaction/examples/: bank_transfer.rs  basic.rs
src/crates/transaction/src/: error.rs  lib.rs  manager.rs  proxy.rs  transaction.rs
src/crates/transaction/tests/: integration_tests.rs
src/derive/: README.md  cache.rs  client.rs  engine.rs  error.rs  macros.rs  mod.rs  query.rs  rate_limit.rs  result.rs  rss.rs  types.rs
src/llm/: __init__.py
src/net/: mod.rs  on.rs  types.rs
src/net/client/: mod.rs  pool.rs  proxy.rs  tls.rs
src/net/privacy/: fingerprint.rs  headers.rs  integration_tests.rs  manager.rs  mod.rs  tor.rs  user_agent.rs
src/net/resolver/: doh.rs  mod.rs  pool.rs
src/python/: __init__.py
src/python/searx/: preferences.py  settings.yml  webapp_api.py
src/python/searx/search/processors/: __init__.py  online.py
src/python_bindings/: mod.rs  py_api.rs  py_browser.rs  py_cache.rs  py_config.rs  py_engine_registry.rs  py_rss.rs  py_search.rs
src/rss/: fetcher.rs  mod.rs  on.rs  parser.rs  ranking.rs  template.rs  types.rs
src/search/: aggregator.rs  engine_config.rs  engine_manager.rs  limiter.toml  mod.rs  on.rs  orchestrator.rs  query.rs  scoring.rs  scoring_tests.rs  standardization.rs  types.rs
src/search/engines/: baidu.rs  baidu_update.tmp  bilibili.rs  bing.rs  bing_images.rs  bing_news.rs  bing_videos.rs  brave.rs  duckduckgo.rs  github.rs  google.rs  mod.rs  mojeek.rs  qwant.rs  search360.rs  sogou.rs  sogou_images.rs  sogou_videos.rs  sogou_wechat.rs  stackoverflow.rs  startpage.rs  unsplash.rs  utils.rs  wikidata.rs  wikipedia.rs  yahoo.rs  yahoo_update.tmp  yandex.rs
src/search/engines/custom/: mod.rs
src/search/searx/: dynamic_engine_manager.py  limiter.py  settings.yml  settings_defaults.py  version.py  weather.py  webadapter.py  webapp_api.py  webutils.py
src/search/searx/engines/: __init__.py
src/search/tmp/: engine_state.json
tests/: derive_tests.rs  integration_test.rs  test_force_search.rs  test_fulltext_search.rs  test_python_sdk.py  test_rss.rs  test_semantic_cache.rs
