[package]
name = "SeeSea"
version = "0.1.0"
edition = "2021"


description = "SeeSea - A privacy-focused metasearch engine"


keywords = ["search", "metasearch", "rust", "privacy", "tor", "proxy", "python"]


license = "MIT"
readme = "README.md"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
html-escape = "0.2.13"
num_cpus = "1.17.0"
proc-macro2 = { version = "1.0.103", optional = true }
quote = { version = "1.0.42", optional = true }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sled = "0.34.7"
syn = { version = "2.0.110", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
url = "2.5.7"

# 内部依赖 - 错误处理模块
error = { path = "src/crates/error" }
error-derive = { path = "src/crates/error-derive" }
urlencoding = "2.1.3"


[dev-dependencies]


[[bin]]
name = "SeeSea"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[features]
default = []
derive = ["proc-macro2", "quote", "syn"]
proc-macro2 = ["dep:proc-macro2"]
quote = ["dep:quote"]
syn = ["dep:syn"]
