[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "seesea"
version = "0.1.0"
description = "SeeSea - Privacy-focused metasearch engine with Rust backend"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["search", "metasearch", "privacy", "rust"]
authors = [
    {name = "SeeSea Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = []

[project.scripts]
seesea = "seesea.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/nostalgiatan/SeeSea"
Repository = "https://github.com/nostalgiatan/SeeSea"
Documentation = "https://github.com/nostalgiatan/SeeSea/blob/main/docs"

[tool.maturin]
features = ["python"]
python-source = "."
module-name = "seesea.seesea_core"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py38"
